Findbugs inefficient code
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@1044360 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 57ef7f1340b3d0c9044d7952d63068a9a634b1fb